<?xml version="1.0" encoding="UTF-8"?>
<resources>
    <string name="hello">Hello World, Fab!</string>
    <string name="app_name">Fab</string>
    <string name="agree_to">I agree to the</string>
    <string name="underline_agreement"> Terms of Use and Privacy Policy</string>
    <string name="cart">Cart</string>
    <string name="refresh">Refresh</string>
    <string name="home">Home</string>
    <string name="more">More</string>
    <string name="invite">Invite</string>
    <string name="share">Share</string>
    <string name="guarantee1">We guarantee that Fab is authorized to sell this product and that</string>
    <string name="guarantee2">every brand we sell is authentic.</string>
    <string name="quantity">Quantity</string>
    <string name="size">Size</string>
    <string name="timer_notification">timer notification</string>
    <string name="sale_notification">sale notification</string>
    <string name="weekly_sale_notification">weekly sale notification</string>
    <string name="special_sale_notification">special sale notification</string>
    <string name="network_error">No Network Connection</string>
    <string name="error_msg">We had a problem. Please Refresh.</string>
    <string name="guest_msg_buy_now">Please Sign-In to complete your purchase.</string>
    <string name="guest_msg">Please Sign-In to access this area.</string>
    <string name="version">Fab version</string>
    <string name="notification">Reminder</string>
    <string name="guest_msg_title">Sign In or Register</string>
    <string name="guest_msg_invite">Please sign in or register to invite friends to Fab</string>
    <string name="guest_msg_share_product">Please sign in or register to share the product</string>
    <string name="guest_msg_fav_product">Please sign in or register to fav the product</string>
    <string name="guest_msg_share_sale">Please sign in or register to share this sale</string>
    <string name="guest_msg_share_shop">Please sign in or register to share this shop</string>
    <string name="fb_login">Login with Facebook</string>
    <string name="fb_same_email">We found an &lt;font color=white>&lt;b> existing &lt;/b>&lt;/font> Fab account &lt;/br>created with the &lt;font color=white>&lt;b>same email&lt;/b> &lt;/br>&lt;b> address &lt;/b>&lt;/font>as your Facebook account.</string>
    <string name="create_pwd">Create Password</string>
    <string name="fb_note">*Note: Your Facebook login can only be linked with one Fab account.</string>
    <string name="fb_scene_dialog">Do you already have a Fab account?</string>
    <string name="create_pwd_msg">You will recieve an email at the following address to create a password.</string>
    <string name="submit">Submit</string>
    <string name="shop_with_fb_friends">Shop with your Friends on Fab!</string>
    <string name="share_faves_on_fb">Share Your Fab Favorites on Your Facebook Timeline</string>
    <string name="show_off_faves">Show off your latest design ﬁnds with your Facebook friends.</string>
    <string name="share_fb_actions">Share your favorites and purchases with your Facebook friends.</string>
    <string name="fab_index_line1">Fab is</string>
    <string name="fab_index_line2">&lt;font color=white>Everyday&lt;/font>&lt;font color=#dd0000> Design.&lt;/font></string>
</resources>