<?xml version="1.0" encoding="UTF-8"?>
<RelativeLayout android:id="@id/holderView" android:paddingLeft="14.0dip" android:paddingTop="55.0dip" android:paddingRight="14.0dip" android:focusable="true" android:focusableInTouchMode="true" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <com.fab.views.FabTextView android:textSize="23.0sp" android:textStyle="bold" android:textColor="@color/silver" android:id="@id/createPwdtxt" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/create_pwd" />
    <com.fab.views.FabTextView android:textSize="14.0sp" android:textColor="@color/silver" android:id="@id/message" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="19.0dip" android:text="@string/create_pwd_msg" android:layout_below="@id/createPwdtxt" android:lineSpacingExtra="4.0dip" />
    <com.fab.views.FabTextView android:textSize="15.0sp" android:textColor="@color/white" android:id="@id/emailText" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="18.0dip" android:text="Email:" android:layout_below="@id/message" />
    <com.fab.views.FabTextView android:textSize="15.0sp" android:textStyle="bold" android:textColor="@color/silver" android:id="@id/emailAddress" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="10.0dip" android:text="" android:layout_toRightOf="@id/emailText" android:layout_alignTop="@id/emailText" android:layout_alignBottom="@id/emailText" />
    <com.fab.views.FabButton android:textSize="14.0sp" android:textStyle="bold" android:textColor="@color/white" android:id="@id/btnCreatePwd" android:background="@drawable/red_button_full" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="20.0dip" android:text="@string/submit" android:layout_weight="1.0" android:layout_below="@id/emailAddress" />
</RelativeLayout>