<?xml version="1.0" encoding="UTF-8"?>
<ScrollView android:id="@id/holderView" android:focusable="true" android:focusableInTouchMode="true" android:fadingEdge="none" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <RelativeLayout android:layout_width="fill_parent" android:layout_height="fill_parent">
        <com.fab.views.TitleWidget android:id="@id/titleWidget" android:layout_width="fill_parent" android:layout_height="wrap_content" />
        <RelativeLayout android:paddingLeft="14.0dip" android:paddingTop="30.0dip" android:paddingRight="14.0dip" android:paddingBottom="43.0dip" android:layout_width="fill_parent" android:layout_height="fill_parent" android:layout_below="@id/titleWidget">
            <com.fab.views.FabTextView android:textSize="23.0sp" android:textStyle="bold" android:textColor="@color/silver" android:id="@id/signintxt" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="Register to Fab.com" />
            <com.fab.views.FabEditText android:textSize="13.0sp" android:textColor="@color/input_field" android:id="@id/emailText" android:background="@drawable/input_field_full" android:padding="7.0dip" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="11.0dip" android:hint="Enter an Email Address" android:layout_below="@id/signintxt" android:inputType="textEmailAddress" />
            <com.fab.views.FabEditText android:textSize="13.0sp" android:textColor="@color/input_field" android:id="@id/passwordText" android:background="@drawable/input_field_full" android:padding="7.0dip" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="12.0dip" android:hint="Enter a Password" android:layout_below="@id/emailText" android:inputType="textPassword" android:imeOptions="actionDone" />
            <com.fab.views.FabTextView android:textSize="12.0sp" android:textColor="@color/silver" android:id="@id/tncText" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="25.0dip" android:layout_marginTop="12.0dip" android:text="@string/agree_to" android:layout_below="@id/passwordText" />
            <com.fab.views.FabTextView android:textSize="12.0sp" android:textColor="@color/silver" android:id="@id/underlinedText" android:clickable="true" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/underline_agreement" android:layout_toRightOf="@id/tncText" android:layout_alignTop="@id/tncText" android:layout_alignBottom="@id/tncText" />
            <CheckBox android:id="@id/tnc" android:layout_width="17.0dip" android:layout_height="17.0dip" android:layout_marginTop="12.0dip" android:checked="true" android:button="@drawable/checkbox" android:layout_toLeftOf="@id/tnc" android:layout_below="@id/passwordText" />
            <com.fab.views.FabButton android:textSize="12.0sp" android:textStyle="bold" android:textColor="@color/silver" android:id="@id/register" android:background="@drawable/gray_button_small" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="12.0dip" android:text="Register" android:layout_below="@id/tncText" android:layout_alignBottom="@id/fbConnect" />
            <com.fab.views.FabButton android:textSize="12.0sp" android:textStyle="bold" android:textColor="@color/white" android:id="@id/fbConnect" android:background="@drawable/fb_connect_login" android:paddingLeft="26.0dip" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="14.0dip" android:text="@string/fb_login" android:layout_below="@id/tncText" android:layout_alignRight="@id/passwordText" />
        </RelativeLayout>
    </RelativeLayout>
</ScrollView>