<?xml version="1.0" encoding="UTF-8"?>
<ScrollView android:id="@id/holderView" android:focusable="true" android:focusableInTouchMode="true" android:fadingEdge="none" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <RelativeLayout android:paddingLeft="14.0dip" android:paddingTop="30.0dip" android:paddingRight="14.0dip" android:paddingBottom="43.0dip" android:layout_width="fill_parent" android:layout_height="fill_parent">
        <com.fab.views.FabTextView android:textSize="23.0sp" android:textStyle="bold" android:textColor="@color/silver" android:id="@id/signintxt" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="Sign-In" />
        <com.fab.views.FabButton android:textSize="11.0sp" android:textColor="@color/inactive_color" android:id="@id/logout" android:background="@drawable/forgot_password_button" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="Different User" android:layout_alignParentRight="true" />
        <com.fab.views.FabTextView android:textSize="17.0sp" android:textColor="@color/silver" android:id="@id/reloginMsg" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="15.0dip" android:text="" android:layout_below="@id/logout" android:lineSpacingExtra="4.0dip" />
        <com.fab.views.FabTextView android:textSize="15.0sp" android:textColor="@color/white" android:id="@id/emailText" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="17.0dip" android:text="Email:" android:layout_below="@id/reloginMsg" />
        <com.fab.views.FabTextView android:textSize="15.0sp" android:textStyle="bold" android:textColor="@color/silver" android:id="@id/emailAddress" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="10.0dip" android:text="" android:layout_toRightOf="@id/emailText" android:layout_alignTop="@id/emailText" android:layout_alignBottom="@id/emailText" />
        <com.fab.views.FabEditText android:textSize="13.0sp" android:textColor="@color/input_field" android:id="@id/passwordText" android:background="@drawable/input_field_full" android:padding="7.0dip" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="10.0dip" android:hint="Password" android:layout_below="@id/emailText" android:inputType="textPassword" android:imeOptions="actionDone" />
        <RelativeLayout android:id="@id/rel1" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="14.0dip" android:layout_below="@id/passwordText" android:layout_alignWithParentIfMissing="true">
            <com.fab.views.FabButton android:textSize="12.0sp" android:textStyle="bold" android:textColor="@color/inactive_color" android:id="@id/signin" android:background="@drawable/red_btn_login_inactive" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="Sign-In" android:layout_below="@id/passwordText" android:layout_alignWithParentIfMissing="true" />
            <com.fab.views.FabTextView android:textSize="12.0sp" android:textStyle="bold" android:textColor="@color/silver" android:gravity="center" android:id="@id/or" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="15.0dip" android:layout_marginRight="15.0dip" android:text="Or" android:layout_toRightOf="@id/signin" android:layout_below="@id/passwordText" android:layout_alignBottom="@id/fbConnect" android:layout_alignWithParentIfMissing="true" />
            <com.fab.views.FabButton android:textSize="12.0sp" android:textStyle="bold" android:textColor="@color/white" android:id="@id/fbConnect" android:background="@drawable/fb_connect_login" android:paddingLeft="26.0dip" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/fb_login" android:layout_toRightOf="@id/or" android:layout_alignParentRight="true" android:layout_alignWithParentIfMissing="true" />
        </RelativeLayout>
        <com.fab.views.FabButton android:textSize="12.0sp" android:textStyle="bold" android:textColor="@color/white" android:gravity="center" android:id="@id/createPwd" android:background="@drawable/create_pwd" android:visibility="gone" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="12.0dip" android:text="@string/create_pwd" android:layout_below="@id/rel1" android:layout_alignParentRight="true" android:layout_alignWithParentIfMissing="true" />
        <com.fab.views.FabTextView android:textSize="11.0sp" android:gravity="center" android:id="@id/note" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="25.0dip" android:text="@string/fb_note" android:layout_below="@id/createPwd" android:layout_alignParentBottom="true" android:layout_alignWithParentIfMissing="true" />
    </RelativeLayout>
</ScrollView>